# engine

./: Cargo.toml  README.md
assets/: README.txt
assets/config/: rules.json
assets/config/levels/: level1.json  level2.json  level3.json  level4.json
assets/config/presets/: slot1.json  slot2.json  slot3.json
src/: asset_gen.rs  assets.rs  export.rs  generator.rs  main.rs  scene.rs
