[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = { version = "0.4", features = ["audio"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
hound = "3"

[[bin]]
name = "engine"
path = "src/main.rs"

[[bin]]
name = "gen_assets"
path = "src/bin/gen_assets.rs"
